[gd_scene load_steps=4 format=3 uid="uid://cfrmn12u807m7"]

[ext_resource type="Texture2D" uid="uid://eeggewh6f2rx" path="res://graphics/player/player.png" id="1_dovo2"]
[ext_resource type="Script" uid="uid://5baq3uld6tcb" path="res://scenes/player/player.gd" id="1_gmlin"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dovo2"]
radius = 70.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_gmlin")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(33, 0)
rotation = 1.5708
texture = ExtResource("1_dovo2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dovo2")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GranadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPosition" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(127, 19)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(124, 29)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(124, 12)

[node name="GranadeStartPosition" type="Node2D" parent="."]

[node name="GranadeMarker" type="Marker2D" parent="GranadeStartPosition"]
position = Vector2(127, 22)

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GranadeTimer" to="." method="_on_granade_timer_timeout"]
